tests/single_instruction_translation_validation/mcsema/register-variants-samereg/packuswb_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:313:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 16, i8* nonnull %28) #22
            ^
0.04user 0.02system 0:00.09elapsed 67%CPU (0avgtext+0avgdata 27568maxresident)k
0inputs+16outputs (0major+3253minor)pagefaults 0swaps
